special handling for h and H types