@@ -6,7 +6,7 @@ import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 import xyz.bobkinn.indigoi18n.template.format.StringTemplateFormatter;
 
-import java.util.List;
+import java.util.Arrays;
 import java.util.stream.Stream;
 
 public class TestStringTemplateFormatter {
@@ -15,7 +15,7 @@ public class TestStringTemplateFormatter {
 
     private String formatStr(String text, Object... args) {
         var entry = TemplateProcessor.parse(text);
-        return strF.format(entry, List.of(args));
+        return strF.format(entry, Arrays.asList(args));
     }
 
     static Stream<Arguments> provideStrFormatCases() {
@@ -35,7 +35,12 @@ public class TestStringTemplateFormatter {
 
                 Arguments.of("chance is %{s:%}", new Object[]{0.55}, "chance is 55.000000%"),
                 Arguments.of("chance is %{s:#%}", new Object[]{0.55}, "chance is 55%"),
-                Arguments.of("chance is %{s:.1%}", new Object[]{0.55321}, "chance is 55.3%")
+                Arguments.of("chance is %{s:.1%}", new Object[]{0.55321}, "chance is 55.3%"),
+
+                Arguments.of("test %{s:h}", new Object[]{"zz"}, "test f40"),
+                Arguments.of("test %{s:H}", new Object[]{"zz"}, "test F40"),
+                Arguments.of("test %{s:h}", new Object[]{null}, "test null"),
+                Arguments.of("test %{s:H}", new Object[]{null}, "test NULL")
         );
     }
 
